Browsing threads and deleting works